INTERNAL-35: Remove cms block

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -15,5 +15,6 @@
 
         <referenceBlock name="category.description" remove="true" />
         <referenceBlock name="category.image" remove="true" />
+        <referenceBlock name="category.cms" remove="true" />
     </body>
 </page>
