INTERNAL-58: Add comments

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -38,14 +38,14 @@ if (!$isAlpineTemplate) {
         $formattedPrice = $pricingHelper->currency($price, true, false);
     }
 
-
+    // get image full url
     $mediaUrl = $storeManager->getStore()->getBaseUrl(UrlInterface::URL_TYPE_MEDIA);
     $imageUrl = $mediaUrl . 'catalog/product' . $product->getImage();
 } else {
     $featuredImage = null;
 }
 ?>
-
+<!--I made a product card 1/2 of grid column width to make it look more similar to original design-->
 <article
     class="z-10 relative flex h-full w-1/2 flex-col items-stretch justify-start text-start"
     x-data="ProductPage()"
