--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/layout/default_head_blocks.xml
@@ -2,8 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <font src="fonts/Satoshi-Medium.woff2"/>
-        <font src="fonts/Satoshi-Bold.woff"/>
+        <css src="css/custom-fonts.css"/>
         <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" type="text/javascript"/>
     </head>
 </page>
