--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/breadcrumbs.phtml
@@ -5,14 +5,14 @@ use Hyva\Theme\ViewModel\SvgIcons;
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
 // TODO: Make dynamic
-$isAlpineTemplate = false;
+$isAlpinepageType = false;
 $condition = false;
 $isNoMobile = false;
-$template = $this->getRequest()->getFullActionName();
-if (in_array($template, ['cms_index_index', 'checkout_cart_index', 'catalog_category_view', 'cms_noroute_index', 'customer_account_index', 'customer_address_index', 'sales_order_history', 'giftvoucher_index_index'])) {
+$pageType = $this->getRequest()->getFullActionName();
+if (in_array($pageType, ['cms_index_index', 'checkout_cart_index', 'catalog_category_view', 'cms_noroute_index', 'customer_account_index', 'customer_address_index', 'sales_order_history', 'giftvoucher_index_index'])) {
     $condition = true;
 }
-if (in_array($template, ['catalog_category_view', 'catalog_product_view', 'catalogsearch_result_index'])) {
+if (in_array($pageType, ['catalog_category_view', 'catalog_product_view', 'catalogsearch_result_index'])) {
     $isNoMobile = true;
 }
 ?>
@@ -26,73 +26,84 @@ if (in_array($template, ['catalog_category_view', 'catalog_product_view', 'catal
         <div role="list" class="truncate">
             <?php foreach ($crumbs as $crumbName => $crumbInfo) : ?>
                 <div role="listitem" class="breadcrumb <?= $block->escapeHtmlAttr($crumbName) ?>">
-                    <?php if ($crumbInfo['link']) : ?>
-                        <div role="listitem" class="inline font-bold text-neutral-500 contrast-more:text-secondary-700">
-                            <a x-element-transition-trigger href="">
-                                <?= $block->escapeHtml($crumbInfo['label']) ?>
-                            </a>
-                        </div>
-                        <div
-                            role="listitem"
-                            class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
-                            aria-hidden="true"
-                        >
-                            <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                        </div>
+                    <?php if ($isAlpinepageType): ?>
+                        <template x-if="$store['transition'].pageType === 'category'">
+                            <div class="contents">
+                                <div role="listitem" class="breadcrumb"
+                                     x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-                        <!-- TODO: Many non existent variables must be implemented -->
-                    <?php elseif ($crumbInfo['last']) : ?>
-                        <?php if ($isAlpineTemplate): ?>
-                            <?php if ($pageType === 'category'): ?>
-                                <div class="contents">
-                                    <div role="listitem" class="breadcrumb">
-
-                                    </div>
+                        <template x-if="$store['transition'].pageType === 'article'">
+                            <div class="contents">
+                                <div role="listitem" class="breadcrumb">
+                                    <a x-element-transition-trigger href="{{ blog.url }}" aria-current="page">{{
+                                        blog.title }}</a>
                                 </div>
-                            <?php endif; ?>
-
-                            <?php if ($pageType === 'article'): ?>
-                                <div class="contents">
-                                    <div role="listitem" class="breadcrumb">
-                                        <a x-element-transition-trigger href=""
-                                           aria-current="page">
-                                        </a>
-                                    </div>
-                                    <div role="listitem"
-                                         class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
-                                         aria-hidden="true">
-                                        <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
-                                    </div>
-                                    <div role="listitem" class="breadcrumb">
-                                        <?= htmlspecialchars($pageData['title'] ?? '', ENT_QUOTES, 'UTF-8') ?>
-                                    </div>
+                                <div
+                                    role="listitem"
+                                    class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
+                                    aria-hidden="true"
+                                >
+                                    {% render 'breadcrumb-arrow' %}
                                 </div>
-                            <?php endif; ?>
+                                <div role="listitem" class="breadcrumb"
+                                     x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-                            <?php if ($pageType === 'product'): ?>
-                                <div class="contents">
-                                    <div role="listitem" class="breadcrumb">
-                                        <?= htmlspecialchars($pageData['title'] ?? '', ENT_QUOTES, 'UTF-8') ?>
-                                    </div>
-                                </div>
-                            <?php endif; ?>
+                        <template x-if="$store['transition'].pageType === 'product'">
+                            <div class="contents">
+                                <div role="listitem" class="breadcrumb"
+                                     x-text="$store['transition'].pageData?.title"></div>
+                            </div>
+                        </template>
 
-                            <?php if ($pageType === 'search'): ?>
-                                <div class="contents">
-                                    <div role="listitem" class="breadcrumb">>
-                                    </div>
-                                </div>
-                            <?php endif; ?>
+                        <template x-if="$store['transition'].pageType === 'search'">
+                            <div class="contents"
+                                 x-data="{
+                                    searchTerm: $store['transition'].pageData?.search,
+                                    resultCount: $store['transition'].pageData?.resultCount,
+                                    getFormattedText() {
+                                        var text = '<?= __('%1 result found for "%2"') ?>';
+                                        return hyva.strf(text, this.resultCount, this.searchTerm);
+                                    }
+                                }"
+                            >
+                                <div
+                                    role="listitem"
+                                    class="breadcrumb"
+                                    x-html="getFormattedText()"
+                                ></div>
+                            </div>
+                        </template>
 
-                        <?php else: ?>
+                    <?php else: ?>
+                        <?php if ($crumbInfo['link']) : ?>
+                            <div role="listitem"
+                                 class="inline font-bold text-neutral-500 contrast-more:text-secondary-700">
+                                <a x-element-transition-trigger href="">
+                                    <?= $block->escapeHtml($crumbInfo['label']) ?>
+                                </a>
+                            </div>
+                            <div
+                                role="listitem"
+                                class="mx-4 inline-block text-neutral-500 contrast-more:text-secondary-700"
+                                aria-hidden="true"
+                            >
+                                <?= $hyvaicons->renderHtml('breadcrumb-chevron'); ?>
+                            </div>
+
+                            <!-- TODO: Many non existent variables must be implemented -->
+                        <?php elseif ($crumbInfo['last']) : ?>
                             <div role="listitem" class="breadcrumb">
                                 <?= $block->escapeHtml($crumbInfo['label']) ?>
                             </div>
                         <?php endif; ?>
                     <?php endif; ?>
+
                 </div>
             <?php endforeach; ?>
         </div>
     </nav>
 <?php endif; ?>
-
