--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -52,13 +52,13 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
 
                     <div class="mt-3 flex flex-col">
                         <label for="first_name" class="sr-only tracking-widest">
-                            <?= __('First Name') ?>
+                            <?= __('First name') ?>
                         </label>
                         <input
                             type="text"
                             name="firstname"
                             id="first_name"
-                            placeholder="<?= __('First Name') ?>"
+                            placeholder="<?= __('First name') ?>"
                             class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
                             value="<?= $escaper->escapeHtmlAttr($block->getFormData()->getFirstname()) ?>"
                             autocomplete="given-name"
@@ -69,13 +69,13 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
 
                     <div class="mt-3 flex flex-col">
                         <label for="last_name" class="sr-only tracking-widest">
-                            <?= __('Last Name') ?>
+                            <?= __('Last name') ?>
                         </label>
                         <input
                             type="text"
                             name="lastname"
                             id="last_name"
-                            placeholder="<?= __('Last Name') ?>"
+                            placeholder="<?= __('Last name') ?>"
                             class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
                             value="<?= $escaper->escapeHtmlAttr($block->getFormData()->getLastname()) ?>"
                             autocomplete="family-name"
