SATO-48: update register.phtml

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/register.phtml
@@ -1,11 +1,4 @@
 <?php
-/**
- * Hyvä Themes - https://hyva.io
- * Copyright © Hyvä Themes 2020-present. All rights reserved.
- * This product is licensed per Magento install
- * See https://hyva.io/license
- */
-
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
@@ -41,7 +34,8 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
                 <form id="<?= $escaper->escapeHtmlAttr($formId) ?>"
                       action="<?= $escaper->escapeUrl($block->getPostActionUrl()) ?>" method="post"
                       novalidate="novalidate" enctype="multipart/form-data" autocomplete="off"
-                      x-data="Object.assign(hyva.formValidation($el), initForm())">
+                      x-data="Object.assign(hyva.formValidation($el), initForm())"
+                      @submit.prevent="submitForm">
                     <?= $block->getBlockHtml('formkey'); ?>
                     <?= $block->getChildHtml('form_fields_before') ?>
                     <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_CUSTOMER_CREATE) : '' ?>
@@ -55,11 +49,14 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
                             name="firstname"
                             id="first_name"
                             placeholder="<?= __('First name') ?>"
-                            class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            class="h-[44px] w-full rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            :class="{ 'border-error': errorMessages.firstname }"
                             value="<?= $escaper->escapeHtmlAttr($block->getFormData()->getFirstname()) ?>"
                             autocomplete="given-name"
                             required
+                            @input="clearError('firstname')"
                         />
+                        <p class="text-error" x-show="errorMessages.firstname" x-text="errorMessages.firstname"></p>
                     </div>
 
                     <div class="mt-3 flex flex-col">
@@ -71,11 +68,14 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
                             name="lastname"
                             id="last_name"
                             placeholder="<?= __('Last name') ?>"
-                            class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            class="h-[44px] w-full rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            :class="{ 'border-error': errorMessages.lastname }"
                             value="<?= $escaper->escapeHtmlAttr($block->getFormData()->getLastname()) ?>"
                             autocomplete="family-name"
                             required
+                            @input="clearError('lastname')"
                         />
+                        <p class="text-error" x-show="errorMessages.lastname" x-text="errorMessages.lastname"></p>
                     </div>
 
                     <div class="mt-3 flex flex-col">
@@ -87,11 +87,14 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
                             name="email"
                             id="email_address"
                             placeholder="<?= __('Email') ?>"
-                            class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            class="h-[44px] w-full rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            :class="{ 'border-error': errorMessages.email }"
                             value="<?= $escaper->escapeHtmlAttr($block->getFormData()->getEmail()) ?>"
                             autocomplete="email"
                             required
+                            @input="clearError('email')"
                         />
+                        <p class="text-error" x-show="errorMessages.email" x-text="errorMessages.email"></p>
                     </div>
 
                     <div class="mt-3 flex flex-col">
@@ -103,11 +106,14 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
                             name="password"
                             id="password"
                             placeholder="<?= __('Password') ?>"
-                            class="h-[44px] rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            class="h-[44px] w-full rounded-[--inputs-radius] border px-5 py-4 border-text-50 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+                            :class="{ 'border-error': errorMessages.password }"
                             required
                             data-validate='{"password-strength": {"minCharacterSets": <?= (int)$passwordMinCharacterSets ?>}}'
                             autocomplete="<?= $isAutocompleteEnabled ? 'new-password' : 'off' ?>"
+                            @input="clearError('password')"
                         />
+                        <p class="text-error" x-show="errorMessages.password" x-text="errorMessages.password"></p>
                     </div>
 
                     <button class="mt-7 w-full rounded-[--buttons-radius] bg-primary-bg px-6 py-4 text-white">
@@ -130,7 +136,24 @@ $isAutocompleteEnabled = $block->getConfig('customer/password/autocomplete_on_st
     function initForm() {
         return {
             errors: 0,
+            errorMessages: {},
+            clearError(field) {
+                this.errorMessages[field] = '';
+            },
+            setErrorMessages(messages) {
+                this.errorMessages = messages;
+            },
             submitForm() {
+                this.errors = 0;
+                this.errorMessages = {};
+
+                // Custom form validation logic here
+                // Example:
+                // if (!this.firstname) {
+                //     this.errors++;
+                //     this.errorMessages.firstname = 'First name is required.';
+                // }
+
                 this.validate()
                     .then(() => {
                         const $form = document.querySelector('#<?= $escaper->escapeJs($formId) ?>');
